# sfml_toys

./: .gitignore
include/: aliens.hpp  bullets.hpp  detail.hpp  game_states.hpp  pygame-sprite-facade.hpp  settings.hpp  ship.hpp  space-invaders.hpp  static_settings.hpp
space_invaders/: CMakeLists.txt
space_invaders/dlls/: CMakeLists.txt
space_invaders/include/: aliens.hpp  pygame-sprite-facade.hpp  space-invaders.hpp  static_settings.hpp
space_invaders/src/: CMakeLists.txt  main.cpp  ship.cpp  space-invaders.cpp
src/: CMakeLists.txt  aliens.cpp  bullets.cpp  detail.cpp  game_states.cpp  main.cpp  pygame-sprite-facade.cpp  ship.cpp  space-invaders.cpp
